--- a/styles.css
+++ b/styles.css
@@ -1,44 +1,279 @@
+@import url('https://fonts.googleapis.com/css2?family=Piazzolla&family=Anton:wght@400;700&display=swap');
+
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
+html,
 body {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    background-image: linear-gradient(to left bottom, #575dd8, #7a66d8, #9571d9, #ac7dda, #bf8adb, #bc89d9, #b888d7, #b587d5, #9a78cf, #7b6bc8, #565fc2, #1254bb);
-    color: #FFFFFF;
-    font-family: sans-serif;
+  height: 100%;
 }
 
+.wrapper {
+  min-height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-image: linear-gradient(to left bottom, #575dd8, #7a66d8, #9571d9, #ac7dda, #bf8adb, #bc89d9, #b888d7, #b587d5, #9a78cf, #7b6bc8, #565fc2, #1254bb);
+  color: #FFFFFF;
+  font-family: 'Piazzolla', serif;
+}
+
+/* start input field */
+
+.form__group {
+  width: clamp(70%, 550px, 80%);
+}
+
+.form__label {
+  font-family: 'Piazzolla', serif;
+  font-size: 1.2rem;
+  margin-left: 10rem;
+  margin-top: 0.7rem;
+  display: block;
+  transition: all 0.3s;
+  transform: translateY(0rem);
+}
+
+.city-name {
+  font-family: 'Piazzolla', serif;
+  color: #333;
+  font-size: 1.8rem;
+  margin: 0 auto;
+  margin-bottom: 30px;
+  padding: 1.5rem 2rem;
+  border-radius: 0.2rem;
+  background-color: rgb(255, 255, 255);
+  border: none;
+  width: 70%;
+  display: block;
+  border-bottom: 0.3rem solid transparent;
+  transition: all 0.3s;
+}
+
+.city-name:placeholder-shown+.form__label {
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transform: translateY(-4rem);
+  transform: translateY(-4rem);
+}
+
+/* End input field */
+
+.search {
+  padding: .5rem 2rem;
+  border-radius: 0.2rem;
+  border: none;
+  background-color: rgb(255, 255, 255);
+  color: #dbc5f2;
+  font-size: 1.2rem;
+  text-shadow: 1px 1px 2px #44055e;
+  font-family: 'Piazzolla', serif;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+/* start spinner styles */
+.spinner {
+  margin: 100px auto 0;
+  width: 70px;
+  text-align: center;
+  position: absolute;
+}
+
+.spinner>div {
+  width: 18px;
+  height: 18px;
+  border-radius: 100%;
+  display: inline-block;
+  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+}
+
+.spinner>div:nth-child(1) {
+  background-color: rgb(135, 41, 179);
+}
+
+.spinner>div {
+  background-color: rgb(151, 99, 235);
+}
+
+.spinner>div {
+  background-color: rgba(151, 15, 230, 0.774);
+}
+
+.spinner .bounce1 {
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+
+.spinner .bounce2 {
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+
+@-webkit-keyframes sk-bouncedelay {
+
+  0%,
+  80%,
+  100% {
+    -webkit-transform: scale(0)
+  }
+
+  40% {
+    -webkit-transform: scale(1.0)
+  }
+}
+
+@keyframes sk-bouncedelay {
+
+  0%,
+  80%,
+  100% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  }
+
+  40% {
+    -webkit-transform: scale(1.0);
+    transform: scale(1.0);
+  }
+}
+
+/* end spinner styles */
 .location,
-.temperature {
-    height: 30vh;
-    width: 50%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+.temperature-wrapper {
+  width: clamp(300px, 50%, 90vw);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 2rem 0
 }
 
-.temperature {
-    flex-direction: column;
+.temperature-wrapper {
+  flex-direction: row;
+
+}
+
+.temperature-wrapper .others {
+  display: flex;
+  height: 80%;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: column;
+  background-color: rgba(10, 15, 41, 0.45);
+  padding: 1rem 2rem;
+  border-radius: 5px;
+}
+
+.temperature-wrapper .others h3 {
+  letter-spacing: 2px;
+}
+
+.temperature-wrapper .others p {
+  font-size: 1.5rem;
 }
 
 .degree-section {
-    display: flex;
-    align-items: center;
-    cursor: pointer
+  width: 100px;
+  display: flex;
+  align-items: center;
+  cursor: pointer
 }
 
 .degree-section span {
-    margin: 10px;
-    font-size: 30px;
+  margin: 10px;
+  font-size: 30px;
 }
 
-.degree-section h2 {
-    font-size: 40px;
+.degree-section h1 {
+  font-size: 50px;
+}
+
+.error-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  color: #FFFFFF;
+  font-family: 'Anton', sans-serif;
+  font-size: 5rem;
+  text-align: center;
+  background-image: linear-gradient(to left bottom, #575dd8, #7a66d8, #9571d9, #ac7dda, #bf8adb, #bc89d9, #b888d7, #b587d5, #9a78cf, #7b6bc8, #565fc2, #1254bb);
+}
+
+.temperature-description {
+  font-size: 1.8rem;
+  font-weight: 700;
+}
+
+/* error page's button */
+.error-handler {
+  display: none;
+  border: none;
+  padding: 15px 30px;
+  color: #FFFFFF;
+  font-weight: 700;
+  font-family: 'Piazzolla', serif;
+  font-size: 1.5rem;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: #8a42e8c2;
+  border: 2px solid #FFFFFF;
+}
+
+.hide {
+  visibility: hidden;
+}
+
+.show {
+  visibility: visible;
+}
+
+@media only screen and (min-width:1500px) {
+
+  .location,
+  .temperature-wrapper {
+    justify-content: space-around;
+  }
+}
+
+@media only screen and (max-width:800px) {
+  .wrapper .city-name {
+    padding: .5rem 2rem;
+  }
+
+  .wrapper .location {
+    margin-top: 50px;
+  }
+
+  .wrapper .temperature-wrapper {
+    flex-direction: column;
+  }
+
+  .wrapper .temperature-wrapper .others {
+    flex-direction: row;
+    margin: 15px 0;
+  }
+
+  .wrapper .temperature-wrapper .others h2 {
+    padding-right: 20px
+  }
+
+  .wrapper .temperature-wrapper .others span {
+    padding: 0 20px
+  }
+}
+
+@media only screen and (max-width:400px) {
+  .body {
+    height: 100vh;
+  }
+
+  .form__group {
+    margin-top: 50px;
+  }
 }
